--- a/workers_info_api/assets/html_styles/workers_list.css
+++ b/workers_info_api/assets/html_styles/workers_list.css
@@ -1,13 +1,13 @@
+
 .tooltip {
   position: relative;
   display: inline-block;
-
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 200px;
-  background-color: black;
+  background-color: #b34d4d	;
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -27,9 +27,35 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: transparent transparent black transparent;
+  border-color: #80ced6;
 }
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+
+img{
+    width:  280px;
+    height: 200px;
+    overflow: visible;
+}
+
+
+.worker{
+    position: relative;
+    float: left;
+    margin: 25px;
+    clear: left;
+}
+
+
+body{
+   background: black;
+   color: white;
+}
+
+
+body, div{
+margin:0;
 }
